--- a/DJNF_Merrill_2024.Rmd
+++ b/DJNF_Merrill_2024.Rmd
@@ -191,9 +191,10 @@ Aidan Hughes, assistant
     pages](https://docs.google.com/document/d/1A-dlzWX7ksOt6LRHYpuPDk7SPPWxyZEmGt2wC0lM7Mg/edit),
     story pitches, solicit feedback. Shirley Carswell, DJNF Executive
     Director, visits
--   **12:30 p.m.**: Lunch in Knight Hall
--   **2 p.m.**: Prof. Karen Denny on skills to survive in the newsroom.
--   **4 p.m.**: Free time / Final work on projects. (Wells, TA coach)
+-   **11:30 a.m.**: Prof. Karen Denny on skills to survive in the newsroom.
+-   **12:15 p.m.**: Lunch in Knight Hall
+-   **1 p.m.**: On the van for D.C.
+-   **2:30 p.m.**: Tour of African-American History Museum, D.C.
 -   **5:30 p.m.**: Dinner in Riverdale, La Fantome Food Hall (Meet at
     Knight Hall board van)
 
