--- a/DJNF_IRE_Merrill_2025.Rmd
+++ b/DJNF_IRE_Merrill_2025.Rmd
@@ -416,7 +416,7 @@ Quarterly and The Palm Beach Post.
 
 **Cheryl Thompson**
 
-<img src="images/cheryl_thompson.webp" width="300" height="350"/>
+<img src="images/cheryl_thompson.png" width="300" height="260"/>
 
 Cheryl W. Thompson is an investigative correspondent for NPR and senior editor overseeing Member station investigations.
 
