--- a/DJNF_IRE_Merrill_2025.Rmd
+++ b/DJNF_IRE_Merrill_2025.Rmd
@@ -122,6 +122,7 @@ Bridget Lang, assistant
 **Tuesday June 3, 2025**
 
 -   **Breakfast**: On your own at dorm
+-   **Heather Taylor, DJ News Fund visiting** 
 -   **9 a.m.**: Data Visualization. Using Datawrapper for data
     visualization. (Adam Marton). All attend. Room 2103
 -   **10:30 a.m.**: Break. Coffee served.
@@ -173,16 +174,12 @@ Bridget Lang, assistant
 -   **12 p.m.**: Lunch in Knight Hall.
     -   Brief remarks by Alex Pyles, Associate Dean, Academic Affairs,
         Philip Merrill College of Journalism
--   **1 p.m. - 2:30 p.m.**: Jeannine Aversa, U.S. Census Bureau or
-    Bureau of Economic Analysis, localizing stories with BEA data. All attend. Eaton
-    Theater
-    -   Exercise using BEA economic data for your community. 
--   **2:30 p.m. - 2:45 p.m.**: Break
--   **2:45 p.m. - 3:45 p.m.** Connie Mitchell Ford on business reporting. All attend. 
-    Room 2103
-    -   Three ways to get business and economic data and how to localize
-        it.
--   **3:45 p.m.**: Workshop. Connie Mitchell Ford workshop on project
+-   **1 p.m. - 2:00 p.m.**: Covering Congress remotely, Ed Kachinske, U.S. House Press Gallery, via Zoom
+    -   Exercise TBA. 
+-   **2:00 p.m. - 2:15 p.m.**: Break
+-   **2:15 p.m. - 3:15 p.m.** Connie Mitchell Ford on business reporting. All attend. Room 2103
+    -   Three ways to get business and economic data and how to localize it.
+-   **3:15 p.m.**: Workshop. Connie Mitchell Ford workshop on project
     proposals. (Wells, Lang, Herzog as coaches). Room 2103, 2105
 -   **5 p.m.**: Break
 -   **6:30 p.m.**: Dinner on campus
@@ -193,11 +190,11 @@ Bridget Lang, assistant
 **Thursday June 5, 2025**
 
 -   **Breakfast**: On your own at dorm
--   **8:30 a.m.**: Meet at Knight Hall, board van, depart for College
+-   **7:15 a.m.**: Meet at Knight Hall, board van, depart for College
     Park Metro
--   **10:00 a.m.**: Tour U.S. Capitol press galleries with TBA.
+-   **9:00 a.m.**: Tour U.S. Capitol press galleries with Stephen Neukam, Axios and Ed Kachinske, U.S. House Press Gallery.
 -   **Noon**: Lunch in the U.S. Capitol. Meeting with other journalists.
--   **2 p.m.**: Tour of TBA D.C. bureau. 
+-   **2 p.m.**: Tour of AP D.C. bureau with Chad Day, AP's elections team. 
 -   **3:30 p.m.**: Open to explore D.C. or join Wells for an adventure
 -   **6 p.m.**: Dinner in Washington D.C.: Ben’s Chili Bowl
 
