--- a/DJNF_IRE_Merrill_2025.Rmd
+++ b/DJNF_IRE_Merrill_2025.Rmd
@@ -429,21 +429,28 @@ In 2017, her examination of Howard University Hospital revealed myriad problems 
 Thompson is the past president of Investigative Reporters and Editors, a 6,000-member organization whose mission is to improve the quality of investigative journalism. In 2018, she became the first Black elected president in its 43-year history and served for three terms before being elected board chairman in 2021. She also teaches investigative reporting as an associate professor at GWU, where she founded a student NABJ chapter in 2014, and is a member of Alpha Kappa Alpha Sorority, Inc.
 
 
-**Jeannine Aversa**
+**Chad Day**
 
-<img src="images/jeannine_aversa.png" width="300" height="300"/>
+<img src="images/chad_day.png" width="300" height="300"/>
 
-Jeannine Aversa is chief of communications at the U.S. Bureau of
-Economic Analysis, one of the world's leading statistical agencies.
-Before joining BEA in the fall of 2011, [Aversa was a journalist for
-nearly 30
-years](https://talkingbiznews.com/they-talk-biz-news/economics-reporter-joins-bureau-of-economic-analysis/)
-and reported for The Associated Press, Bloomberg News, Fairchild
-Publications and other news organizations. For more than a decade,
-Aversa’s coverage focused on economics, monetary policy, finance and
-politics. She holds a bachelor’s degree in journalism from the
-University of Missouri at Columbia.
+Chad Day is [chief elections analyst at The Associated
+Press](https://blog.ap.org/chad-day-named-chief-elections-analyst). Day
+is a member of AP’s Decision Desk and writes about politics and
+elections. Previously, he was a national political reporter for The Wall
+Street Journal in Washington and an investigative reporter at the
+Associated Press. He was part of a team at the Journal awarded the 2023
+Pulitzer Prize in Investigative Reporting for a series of stories
+exposing federal conflicts of interest.
 
+He is an adjunct lecturer at Georgetown University School of Continuing
+Studies where he teaches data journalism for master's students. He is a
+former investigative reporter for the Arkansas Democrat-Gazette. He
+earned a Bachelor's degree in journalism from the University of Missouri
+at Columbia.
+
+**Stephen Neukam**
+
+Neukam, a graduate of the Merrill College master's of journalism program, covers the U.S. Senate for Axios.
 
 
 ::: {style="text-align: center; color: #337DFF;"}
