--- a/DJNF_IRE_Merrill_2025.Rmd
+++ b/DJNF_IRE_Merrill_2025.Rmd
@@ -112,7 +112,7 @@ Bridget Lang, assistant
 
 -   **5:30 p.m.**: Break
 
--   **6:30 p.m.**: Dinner on campus or TBA
+-   **6:30 p.m.**: Dinner on campus 
 
 -   **11:59 p.m.**: [Draft story pitch
     memo](https://docs.google.com/document/d/1A-dlzWX7ksOt6LRHYpuPDk7SPPWxyZEmGt2wC0lM7Mg/edit),
